# Matrixlab

./: .gitignore  cli-run-module-output.txt  cli-run-output.txt  debug_cli.py  debug_cli_output.txt  main.py  pip-show-numpy.txt  pyproject.toml  typer-env.txt  typer-info.txt
baseline_share/: ARCHITECTURE_SUMMARY.md  CODE_MAP.md  COMMIT_CONTEXT.md  CURRENT_STATE.md  DECISION_GRAPH.md  MANIFEST.json  OPEN_QUESTIONS.md  README.md  RECEIPT_POINTERS.md
scripts/: a0_receipt_to_builder_transition_layer_v0.py  a1_strategic_decision_packet_layer_v0.py  accept_c8_bounded_instrument_build_packet_prep_v0.py  accept_c8_return_to_surface_selection_after_reuse_authority_closure_v0.py  accept_c8_return_to_surface_selection_packet_after_runtime_adoption_closure_v0.py  accept_c8_runtime_adoption_bounded_probe_closure_no_new_authority_after_reentry_v0.py  accept_c8_runtime_adoption_bounded_probe_for_execution_after_reentry_v0.py  accept_c8_runtime_adoption_surface_for_bounded_probe_prep_after_reentry_v0.py  accept_c8_selected_successor_surface_for_bounded_probe_prep_review_after_runtime_adoption_closure_v0.py  accept_c8_successor_surface_bounded_reuse_authority_probe_closure_no_new_authority_v0.py  accept_c8_successor_surface_for_bounded_probe_execution_v0.py  accept_c8_successor_surface_for_bounded_probe_prep_v0.py  accept_c8_unit_feedback_hardening_bounded_probe_for_one_execution_after_runtime_adoption_closure_v0.py  accept_c8_unit_feedback_hardening_bounded_probe_observation_for_review_after_runtime_adoption_closure_v0.py  add_explicit_value_source_dominance_rule_v0.py  (+457 more)
(+130883 files in other folders)
