[project]
name = "matrixlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pytest>=9.1.0",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "typer>=0.26.7",
]
